2012-03-28  Junichi Satoh  <junichi@rworks.jp>

	* mobile/operation/agents/monitor_status.php: Fixed the 'img' path.

2012-03-27 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/bottom_logo_enterprise.png
	 images/bottom_logo.png
	 images/login_bottom.png
	 images/login_background.png
	 images/pandora_login.png
	 images/login_botton.png
	 images/ui_title.png
	 images/ui_dialog_background.png
	 images/pandora_login_enterprise.png
	 images/splash_logout.png: Added images for new login screen.
	 
	* images/splash_pandora.png
	 include/styles/images/dialog-titlebar-close.png
	 include/styles/images/dialog-titlebar-close-hover.png: Modified 
	 images for login screen.

	* include/styles/dialog.css
	 include/styles/pandora.css: Modified css files for login screen.
	 
	* general/login_page.php
	 general/logoff.php: Login and logout screens modified.

2012-03-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Fixed duplicy agents in the
	main screen summary count merged from trunk

2012-03-26  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Merged from trunk: Fixed
	set_create_plugin_module to look proper data in checking
	input parameters.

2012-03-22  Sancho Lerena <sleerna@artica.es>

	* include/functions_html.php
	general/login_page.php: Small changes to use "autocomplete=off" in all
	password fields, and used also in login form to avoid autocompletion of
	user password. Please, port to TRUNK.

2012-03-22  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Added calculation
	of the left side of the graph space

2012-03-22  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/pChart/pDraw.class.php: Added to pchart library the
	parameter to set an independent font size to graph ticks and set it
	on the graph charts one point less

2012-03-22 Miguel de Dios  <miguel.dedios@artica.es>