@@ -1,3 +1,8 @@
+2012-03-28  Sancho Lerena <slerena@artica.es>
+
+	* operation/agentes/estado_agente.php: Fixed several usability problems.
+	Fixed search problem with html entities (blank spaces, etc).
+
 2012-03-28  Junichi Satoh  <junichi@rworks.jp>
 
 	* mobile/operation/agents/monitor_status.php: Fixed the 'img' path.
